--- a/css/estilos.css
+++ b/css/estilos.css
@@ -162,3 +162,6 @@ button#copy {
     border-top-right-radius: 0px;
     width: 100%;
 }
+.fondo{
+    background-image: url("fondos-de-pantalla-para-programadores-CodeWallpaper3-702x336.jpg");
+}
