--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,7 +18,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     font-family: var(--font-main);
-    background: var(--color-gradient), url(assets/letters.gif) no-repeat center center fixed;
     background-size: cover;
     color: var(--color-white);
 }
@@ -48,6 +47,9 @@ label {
     margin-bottom: 0.5rem;
     font-family: var(--font-main);
 }
+#message > * {
+    width: 100%;
+}
 textarea {
     resize: none;
     border-radius: 10px;
@@ -55,7 +57,7 @@ textarea {
     font-family: var(--font-secondary);
     font-weight: 300;
     font-size: 1rem;
-    height: 12rem;
+    height: 15rem;
     background-color: transparent;
     border: 0.15rem solid var(--color-secondary);
     color: var(--color-white);
