--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,5 +163,5 @@ button#copy {
     width: 100%;
 }
 .fondo{
-    background-image: url("https://www.blog.aulaformativa.com/wp-content/uploads/2016/06/fondos-de-pantalla-para-programadores-CodeWallpaper3.jpg");
+    background-image: url("https://img1.picmix.com/output/stamp/normal/8/2/1/8/968128_10265.gif");
 }
