--- a/css/estilos.css
+++ b/css/estilos.css
@@ -165,5 +165,8 @@ button#copy {
     width: 100%;
 }
 .fondo{
-    background-image: url("https://img1.picmix.com/output/stamp/normal/8/2/1/8/968128_10265.gif");
+    background-image: url("https://j.gifs.com/yNzWNJ.gif");
+}
+.cuadro{
+    background-color: blanchedalmond;
 }
