--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,6 +27,7 @@ header, footer {
 }
 h1 {
     font-size: 2rem;
+    font-family:monospace;
 }
 main {
     flex-grow: 1;
@@ -45,7 +46,7 @@ main {
 label {
     font-weight: 400;
     margin-bottom: 0.5rem;
-    font-family: var(--font-main);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 #message > * {
     width: 100%;
@@ -54,10 +55,11 @@ textarea{
     resize: none;
     border-radius: 10px;
     padding: 10px;
-    font-family: var(--font-secondary);
+    font-family:  var(--font-secondary);
     font-weight: 300;
     font-size: 1rem;
     height: 12rem;
+    width: 500px;
     background-color: transparent;
     border: 0.15rem solid var(--color-secondary);
     color: var(--color-white);
@@ -169,4 +171,7 @@ button#copy {
 }
 .cuadro{
     background-color: blanchedalmond;
+}
+.cuadrode{
+    width: 500px;
 }
