--- a/css/ejemplo.css
+++ b/css/ejemplo.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&family=Roboto:wght@300;400&display=swap');
+
 :root{
     --color-main: rgba(33, 23, 82);
     --color-secondary: rgba(20, 209, 143);
@@ -30,18 +32,12 @@ header, footer{
     background-color: var(--color-main);
 }
 
-h1 {
-    font-size: 2rem;
-    font-family:monospace;
-}
-
 footer{
     text-align: center;
 }
 
 h1{
     font-size: 1.5rem;
-
 }
 
 main{
@@ -94,11 +90,10 @@ textarea{
     resize: none;
     border-radius: 10px;
     padding: 10px;
-    font-family:  var(--font-secondary);
+    font-family: var(--font-secondary);
     font-weight: 300;
     font-size: 1rem;
     height: 12rem;
-    width: 500px;
     background-color: transparent;
     border: 0.15rem solid var(--color-secondary);
     color: var(--color-white);
@@ -237,25 +232,60 @@ textarea#msgResult:focus-visible{
     border-radius: 10px;
 }
 
-textarea#msgResult {
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    padding: 0.5rem;
-    margin-bottom: 0;
-}
-button#copy {
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    width: 100%;
-}
-.fondo{
-    background-image: url("https://j.gifs.com/yNzWNJ.gif");
-}
-.cuadro{
-    background-color: blanchedalmond;
-}
-.cuadrode{
-    width: 500px;
+/* Modal Animation*/
+@keyframes open{
+    0%{
+        transform: scale(0);
+    }
+    50%{
+        transform: scale(1.2);
+    }
+    70%{
+        transform: scale(0.95);
+    }
+    95%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
+@keyframes close{
+    100%{
+        transform: translateY(-100vh) scale(0);
+    }
+    50%{
+        transform: scale(1.2);
+    }
+    30%{
+        transform: scale(0.95);
+    }
+    5%{
+        transform: scale(1.1);
+    }
+    0%{
+        transform: scale(1);
+    }
+}
 
+/* Media query*/
+@media (min-width: 200px){
+    h1{
+        font-size: 2rem;
+    }
+}
+@media (min-width: 400px){
+    button{
+        width: 49%;
+    }
+}
+@media (min-width: 768px){
+    #message{
+        width: 70%;
+    }
+    button{
+        width: 49%;
+        font-size: 1rem;
+    }
+}
